--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
 	<uses-feature
 		android:name="android.hardware.bluetooth_le"
-		android:required="true" />
+		android:required="false" />
 
 	<application
 		android:fullBackupContent="true"
@@ -61,6 +61,14 @@
 			</intent-filter>
 		</activity>
 
+		<activity android:name=".GraphActivity"
+			android:theme="@style/Theme.Vapp.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 		<activity
 			android:name="no.nordicsemi.android.nrftoolbox.FeaturesActivity"
 			android:label="@string/app_name"
@@ -208,6 +216,7 @@
 				<category android:name="no.nordicsemi.android.nrftoolbox.LAUNCHER" />
 			</intent-filter>
 		</activity>
+
 
 		<service
 			android:name="no.nordicsemi.android.nrftoolbox.proximity.ProximityService"
