--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation 'com.jjoe64:graphview:4.2.2'
 
     implementation 'no.nordicsemi.android:log:2.2.0'
     implementation 'no.nordicsemi.android.support.v18:scanner:1.4.3'
